Revision history for Perl extension Catalyst::Plugin::Unicode::Encoding

0.8 2010-01-11 13:36:16
        - Don't fail tests if we have an old version of URI::Escape
          installed.

0.7 2009-12-21 21:30:12
        - Make Test::WWW::Mechanize::Catalyst an optional dependency.

0.6 2009-11-16 20:45:43
        - Fix missing dependency for the tests.
        - Avoid LWP releases which break the tests by messing up unicode.

0.5 2009-11-05 02:03:44
        - Decode $c->req->query_parameters, $c->req->body_parameters
        - Decode file upload filenames in parameters
        - Decode filenames in file upload objects
        - Don't die if content already in character octets is encountered

0.4  2009-10-16 17:07:07
        - Fix bug causing Encode to segfault in some cases
        - Fix broken tests

0.3  2009-05-28 19:01:15
        - Switch to Module::Install
        - Require Catalyst 5.8
        - Allow setting undef encoding (per request) to disable default of
          UTF-8
        - Don't overwrite encoding set in content types: 
            "text/html; charset=utf-8"
        - Handles the latin-1 (i.e. e-accute) case of encoding that everyone
          else forgets
        - Copy live tests from Catalyst::Plugin::Encoding
        - Fix bug with setting encoding in config (test from abraxxa)

0.2  2009-04-28 11:43:00 
        - Switch to MRO::Compat for Catalyst 5.8

0.1  2005-06-17 23:29:00
        - inital CPAN release.